js/js.translator/testData/incremental/invalidation/addUpdateRemoveDependentModuleWithCrossModuleInliner/lib2/l2.2.kt
inline fun qux2() = foo() + 32 + qux1()
